remove fixed height and dynamically calculate shift of body content based on height of image

--- a/molgenis-core-ui/src/main/resources/css/molgenis-top-logo.css
+++ b/molgenis-core-ui/src/main/resources/css/molgenis-top-logo.css
@@ -1,11 +1,5 @@
 #logo-top {
     max-width: 100vw;
-    max-height: 200px;
-    height: auto;
-}
-
-body>.container-fluid {
-    padding-top: 260px;
 }
 
 #top-logo-banner {
